src/App.css
html {
}

body {
  background-color: #bbb;
}

h3 {
  margin-top: 30px;
  margin-bottom: 10px;
}

.Header {
  background-color: #00BCD4;
  color: white;
  position: fixed;
  height: 160px;
	top: 0;
	right: 0;
	left: 300px;
  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
  z-index: 4;
	filter: none;
	transition: height 200ms, filter 500ms;
}

.Header > .menu-icon {
  display: none;
}

.Header > h1 {
  padding-left: 105px;
  font-size: 2.5em;
  margin-top: 60px;
	white-space: nowrap;
	transition: 200ms;
}

.Header.small {
	filter: none;
	height: 60px;
	transition: height 150ms, filter 500ms;
}

.Header.small h1 {
	font-size: 1.2rem;
	padding-left: 50px;
	margin-top: 20px;
	transition: 150ms;
}

.Footer {
	background-color: #444;
	color: #ddd;
  position: fixed;
  height: 160px;
  bottom: 0;
  right: 0;
  left: 300px;
  padding-top: 30px;
  box-sizing: border-box;
  padding-left: 105px;
  font-size: 0.85rem;
  z-index: 2;
	filter: none;
	transition: filter 150ms;
}

.Footer a {
	text-decoration: none;
	color: inherit;
}

.Body {
  background-color: #dddede;
  position: relative;
  padding-left: 300px;
  padding-top: 160px;
	padding-bottom: 30px;
  margin-bottom: 160px;
  z-index: 3;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
	filter: none;
	transition: 500ms;
}

.Body a {
  text-decoration: none;
  color: #0000bb;
}

.Card {
  padding: 30px 70px;
  margin: 30px;
  background-color: #fff;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
  border-radius: 2px;
}

.Card p {
  font-size: 0.85rem;
  line-height: 26px;
  margin-top: 10px;
  margin-bottom: 20px;
	text-align: justify;
}

.Card h2 {
	font-size: 1.7rem;
}

.Drawer {
  background-color: #fff;
  position: fixed;
  top: 0px;
  bottom: 0;
  width: 300px;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
  z-index: 5;
  overflow-y: auto;
  height: 100%;
  transition: 500ms;
  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
}

.Drawer.open {
	left: 0;
}

ul {
  padding-left: 0;
  margin: 0;
}

li {
  line-height: 65px;
  font-size: 0.75rem;
  font-weight: 600;
  transition: 400ms;
  white-space: nowrap;
	cursor: pointer;
}

.section-list-item-icon {
	width: 18px;
	position: relative;
	top: 5px;
	padding-right: 20px;
}

.section-list-item {
  padding-left: 20px;
}

.section-list-item:hover {
  padding-left: 25px;
  background-color: #eee;
}

.section-list-item.active {
  padding-left: 28px;
  background-color: #fff;
  color: #00B8D4;
  transition: 550ms;
}

.subsection-list-item {
  padding-left: 40px;
  background-color: #555;
  color: white;
}

.subsection-list-item:hover {
  padding-left: 45px;
  background-color: #4d4d4d;
}

.subsection-list-item.active {
  padding-left: 48px;
  background-color: #555;
  color: #18FFFF;
  transition: 550ms;
}

.Divider {
  height: 1px;
  background-color: #e9e9e9;
}

.noselect {
	/* iOS Safari */
  -webkit-touch-callout: none;

	/* Safari */
  -webkit-user-select: none;

	/* Konqueror HTML */
  -khtml-user-select: none;

	/* Firefox */
  -moz-user-select: none;

	/* Internet Explorer/Edge */
  -ms-user-select: none;

	/* Non-prefixed version, currently
	supported by Chrome and Opera */
  user-select: none;
}

.progressbar {
  max-width: 560px;
  height: 4px;
  background-color: #ddd;
  border-radius: 99px;
}

.progressbar>.progress {
  background-color: #00BCD4;
  height: 100%;
  width: 0;
  border-radius: 99px;
}

.drawer-banner-wrapper > .profile-image {
	height: auto;
	width: 100%;
}

::-webkit-scrollbar {
    display: none;
}

/*Tablet*/
@media screen and (max-width: 950px) {
  .Drawer {
    left: -350px;
  }
  .Body {
    padding-left: 0;
  }
  .Header, .Footer {
    left: 0;
  }
  .Header .menu-icon {
    filter: invert(1);
    position: absolute;
    width: 35px;
    height: auto;
    margin-top: 65px;
    margin-left: 45px;
    display: initial;
		transition: 200ms;
  }
	.Header.small h1{
		padding-left: 55px;
	}
  .Header.small .menu-icon {
    width: 30px;
    margin-top: 16px;
    margin-left: 20px;
		transition: 150ms;
  }
	.Header.drawer-open, .Body.drawer-open, .Footer.drawer-open {
		transition: 300ms;
		filter: brightness(0.5) grayscale(100%);
	}
}

/* Mobile */
@media screen and (max-width: 600px), screen and (max-height: 550px) {
  .Body {
    padding-left: 0;
    padding-right: 0;
		padding-top: 60px;
  }
  .Card {
    margin: 15px 5px;
    padding-left: 20px;
    padding-right: 20px;
  }
  .Card h2 {
    text-align: center;
		word-wrap: break-word;
  }
	.Card p{
		word-wrap: break-word;
    text-align: left;
	}
  .Footer {
    text-align: center;
    padding-left: 0;
  }
  .Header h1 {
    font-size: 1.2rem;
    padding-left: 55px;
    margin-top: 19px;
  }
	.Header {
		height: 60px;
	}
  .Header>.menu-icon {
    width: 30px;
    margin-top: 15px;
    margin-left: 20px;
  }
	.Header.drawer-open, .Body.drawer-open, .Footer.drawer-open {
		transition: 300ms;
		filter: brightness(0.5) grayscale(100%);
	}
}

